--- a/styles.css
+++ b/styles.css
@@ -4,5 +4,5 @@ body {
 
 h1 {
     background-color: purple;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Times New Roman", Times, serif;
 }
